--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
             <li>
                 <p class="title">
                     <span class="time">{{ entry.time }}</span> - 
-                    <a href="https://twitter.com/{{ entry.user }}" class="user" target="_blank">{{ entry.user }}</a>
+                    <a href="https://twitter.com/{{ entry.screen_name }}" class="screen_name" target="_blank">{{ entry.screen_name }}</a>
                 </p>
                 <p class="place">{{ entry.place }}</p>
                 {% autoescape false %}
