--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,14 @@
     <head>
     <title>Verizon Tweets</title>
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+    <script>
+        setTimeout(function(){
+            window.location.reload(1);
+        }, 10000);
+    </script>
+    <noscript>
+        <meta http-equiv = "refresh" content = "10">
+    </noscript>
     </head>
     <body>
         <ul>
